# 5x5_Sobel_Filter

./: .gitignore  CMakeLists.txt  PHASE1_COMPLETE.md  README.md  build.bat  test_phase1.ps1  test_phase2.ps1
examples/: test_data_generator.cpp
images/: README.md
include/: image.hpp  image_io.hpp  sobel_filter.hpp  sobel_filter_simd.hpp
src/: analyze_raw.cpp  benchmark.cpp  benchmark_simd.cpp  debug_test.cpp  edge_analyzer.cpp  fix_contrast.cpp  image.cpp  image_io.cpp  jpg_to_raw.cpp  main.cpp  quick_test.cpp  raw_to_bmp.cpp  raw_viewer.cpp  rgb_to_gray_debug.cpp  sobel_debug.cpp  sobel_filter.cpp  sobel_filter_simd.cpp  validation_test.cpp
